ros2_study/log/build_2025-11-11_17-28-15/my_first_package/stderr.log
  File "/home/hyh/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_service_server.py", line 25
    		y = [r*np..sin(th) for th in theta]
    		          ^
SyntaxError: invalid syntax

